fix: 1. change certain CSS styles in header, working-column-section, footer to align with design

--- a/assets/styles/components/footer.css
+++ b/assets/styles/components/footer.css
@@ -142,7 +142,6 @@ footer .navigation-section .info .condition-section .condition-list .condition u
     display: grid;
     grid: repeat(6, auto) / auto-flow;
     gap: 13px;
-    width: fit-content;
 }
 footer .navigation-section .info .condition-section .condition-list .condition ul a {
     color: rgba(var(--color-white_rgb), 0.3);
